# libglade-panda2

./: .gitignore  ChangeLog  Makefile.am  NEWS  aclocal.m4  config.h.in  configure.ac  libglade-panda-2.0.pc.in  mkinstalldirs
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
glade/: Makefile.am  glade-build.h  glade-gtk.c  glade-private.h  glade-sax.c  glade-widget-tree.h  glade-xml.c  glade-xml.h  glade.h
m4/: ChangeLog
po/: Makevars
test/: Makefile.am  panda-glade-convert.c  test-libglade-panda.c
test/basic/: Makefile.am  basic.glade  callbacks.c  callbacks.h  main.c
test/gtkpanda/: Makefile.am  callbacks.c  callbacks.h  gtkpanda.glade  main.c  test.ps
